deployment/parquimetro-app/yamls/deployment-parquimetro.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parquimetro-app
  labels:
    app: parquimetro-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parquimetro-app
  template:
    metadata:
      name: parquimetro-app
      labels:
        app: parquimetro-app
    spec:
      containers:
        - name: parquimetro-app
          image: yuriesena/fiap-parquimetro
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: 500Mi
              cpu: 100m
            limits:
              memory: 1Gi
              cpu: 1
      restartPolicy: Always
