deployment/parquimetro-app/yamls/service-parquimetro.yaml
apiVersion: v1
kind: Service
metadata:
  name: parquimetro-svc
spec:
  selector:
    app: parquimetro-app
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: NodePort
