deployment/parquimetro-app/yamls/route-parquimetro.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
    name: parquimetro-route
spec:
    tls:
      termination: edge
    to:
      kind: Service
      name: parquimetro-svc
      weight: 100
    port:
      targetPort: 8081
    wildcardPolicy: None
